--- a/app/src/main/res/layout/list_random_recipe.xml
+++ b/app/src/main/res/layout/list_random_recipe.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/moca_light"
     android:id="@+id/random_list_container"
     app:cardElevation="8dp"
+    app:cardCornerRadius="16dp"
     android:layout_margin="8dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,19 +15,22 @@
         <TextView
             android:id="@+id/texView_title"
             android:text="Dish name"
-            android:singleLine="true"
-            android:ellipsize="marquee"
+            android:singleLine="false"
+            android:ellipsize="middle"
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:textStyle="bold"
-            android:textColor="@color/moca"
-            android:textSize="24sp"
+            android:textColor="@color/moca_dark"
+            android:textSize="22sp"
             android:padding="8dp"
+            android:textAlignment="center"
+            android:layout_margin="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/image_food"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
+            android:cropToPadding="true"
             android:layout_margin="8dp"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
