--- a/app/src/main/res/layout/spinner_inner_text.xml
+++ b/app/src/main/res/layout/spinner_inner_text.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Dessert"
+    android:inputType="textCapSentences"
     android:textColor="@color/moca"
     android:textSize="24sp"
     android:padding="8dp">
