working version monaday 17:30

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/moca"
+    android:background="@color/moca_dark"
     tools:context=".MainActivity">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -38,7 +38,7 @@
 
     <androidx.cardview.widget.CardView
         app:cardElevation="8dp"
-        app:cardBackgroundColor="@color/moca_light"
+        app:cardBackgroundColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_margin="0dp">
